@@ -2,6 +2,7 @@ TO DO
 
 + before 4.0final (or pre9?):
 
+- escape in panel window container -> focus back to text area?
 - fix stylesheet problem
 - investigate I/O threads
 - aiob in findMatchingBracket() -- offset >= seg.offset+seg.count? or
